# DIP

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gcovr.cfg.in
cmake/: coverage.cmake  default_compiler_flags.cmake  defaults.cmake  helpers.cmake  project_tools.cmake  sanitizers.cmake
source/: CMakeLists.txt  main.cpp
source/interface/: main.cpp
source/placeHolder/: placeHolder.cpp  placeHolder.hpp
test/: CMakeLists.txt  test.cpp
